added a post with render_math

--- a/content/2016-02-17.md
+++ b/content/2016-02-17.md
@@ -1,9 +1,14 @@
 Title: Testing out render_math to display latex 
-Date: 2016-02-15
+Date: 2016-02-17
 Category: Announcements
 Tags: latex render_math
 Slug: testing-out-render-math-to-display-latex
 Author: epsilon
 
 The most beautiful math equation is:
-$$a^2+b^2=c^2$$
+$$e^{i\pi}+1=0$$
+
+Recently a colleague of mine said that there are final year students that do not know how to go logarithms. Hence I decided to post the basic rules of logarithms for those who have forgotten about it.
+
+1. $\log_am+\log_an=\log_a(mn)$
+2. $\log_am-\log_an=\log_a\left(\dfrac{m}{n}\right)$
